--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,5 @@
+//to change build name acoding to our priject
+currentBuild.displayName = "declarative-pipeline-#"+currentBuild.number
 pipeline{
     agent any
     
